2009-03-17 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-data-boxed.h:
	* src/core/na-data-boxed.c (na_data_boxed_is_set): New function.

	* data/nautilus-actions.schemas.in:
	Fix typo.
	Add io-providers/read-at-startup and io-providers/writable keys.

	* src/nact/nact.desktop.in: Add StartupNotify=true.

	* src/nact/nact-main-window.c (reload):
	Free the deleted list before filling the tree.

	* src/nact/nact-main-menubar.c
	(on_cut_activated): Do not cut not deletable items.
	(get_deletables): Add a ref on items to delete.

	* src/test/init-dispose-diff.sh:
	Do not take into account some debug messages.

2009-03-16 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/nautilus-actions-new.c
	(output_to_dir): Output the new action to a file.

	* src/core/na-core-utils.c (info_dir_is_writable):
	Do not emit a warning on 'no such file or directory' error.

	* src/utils/nautilus-actions-new.c
	(output_to_stdout): Output the new action to stdout.
	(output_to_gconf): Output the new action to GConf.

	* src/io-xml/naxml-writer.c (naxml_writer_write_start):
	Add attribute to list node, thus fixing writing of action.

2009-03-15 Pierre Wieser <pwieser@trychlos.org>

	* src/io-xml/naxml-writer.c (naxml_writer_write_start):
	No need to explicitely write item type as the data is marked writable.

	* src/utils/nautilus-actions-new.c:
	Cleanup old command-line code.
	Check for incompatibility between boolean arguments.

	* src/api/na-data-def.h (na_data_def_get_data_def): New function.

	* src/core/na-data-def.c: New file.

	* src/core/Makefile.am: Updated accordingly.

	* src/core/na-icontextual-factory.c:
	* src/core/na-object-profile-factory.c:
	Update command-line options to not have duplicates.

	* src/utils/nautilus-actions-new.c:
	Use new ArgFromDataDef structure and display suitable help.

	* src/core/na-icontextual-factory.c:
	* src/core/na-object-action-factory.c:
	* src/core/na-object-item-factory.c:
	* src/core/na-object-profile-factory.c: