@@ -1,5 +1,9 @@
 2009-03-17 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/io-gconf/nagp-writer.c (nagp_writer_write_data):
+	* src/io-xml/naxml-writer.c (write_data_schema_v2, write_data_dump):
+	Do not output empty values.
+
 	* src/api/na-data-boxed.h:
 	* src/core/na-data-boxed.c (na_data_boxed_is_set): New function.
 
